<resources>
    <string name="app_name">ramenddak_Android</string>
    <string name="start_text">라 면 딱</string>
    <string name="tap_to_start">Tap to start</string>
    <string name="go_select_ramen">라면 추천받기</string>
    <string name="hyun_seung_ment">난 다 맛있던데..</string>
    <string name="explane">설명</string>
    <string name="text">앞으로의 질문에 답을 하시오.\n\n그리 한다면 당신이 먹고싶은\n라면을 추천해 드립니다.</string>
    <string name="hyun_seung">-현승-</string>
</resources>